// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoGrowingTextInput adjusts the height when content size is updated 1`] = `
<TextInput
  defaultHeight={54}
  multiline={true}
  onContentSizeChange={[Function]}
  scrollEnabled={false}
  style={
    Array [
      undefined,
      Object {
        "height": 100,
      },
    ]
  }
/>
`;

exports[`AutoGrowingTextInput renders 1`] = `
<TextInput
  defaultHeight={54}
  multiline={true}
  onContentSizeChange={[Function]}
  scrollEnabled={false}
  style={
    Array [
      undefined,
      Object {
        "height": 54,
      },
    ]
  }
/>
`;
